# out_ptr

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .style.yapf  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml  funding.yml  macosx.yml  ubuntu.yml  windows.yml
.github/workflows/: macosx.yml  ubuntu.yml  windows.yml
benchmark/: CMakeLists.txt
benchmark_results/: out_ptr_benchmarks.json
benchmarks/: CMakeLists.txt
benchmarks/include/benchmarks/: statistics.hpp
benchmarks/include/benchmarks/out_ptr/: friendly_inout_ptr.hpp  friendly_out_ptr.hpp  friendly_unique_ptr.hpp
benchmarks/source/: local_inout_ptr.cpp  local_out_ptr.cpp  out_ptr_benchmarks_main.cpp  reset_inout_ptr.cpp  reset_out_ptr.cpp  shared_local_out_ptr.cpp  shared_reset_out_ptr.cpp  statistics.cpp
benchmarks/tools/: generate_graphs.py
cmake/: boost_out_ptr-config.cmake.in  phd_out_ptr-config.cmake.in  ztd_out_ptr-config.cmake.in
docs/: out_ptr.adoc
docs/out_ptr/: benchmarks.adoc  caveats.adoc  config.adoc  customization.adoc  examples.adoc  overview.adoc  rationale.adoc  reference.adoc
docs/out_ptr/reference/: inout_ptr.adoc  out_ptr.adoc
examples/: CMakeLists.txt
examples/include/: assert.hpp
examples/source/: boost.shared_ptr.cpp  com.intrusive_ptr.cpp  custom.handle.cpp  customization.handle.cpp  customization.shared_ptr.require_deleter.cpp  customization.traits.handle.cpp  customization.traits.shared_ptr.require_deleter.cpp  handle.hpp  pthread.cpp  pthread.raw_ptr.cpp  sqlite.cpp  std.custom_unique_ptr.cpp  std.shared_ptr.cpp  std.unique_ptr.cpp
include/boost/: out_ptr.hpp
include/boost/out_ptr/: clever_inout_ptr.hpp  clever_out_ptr.hpp  inout_ptr.hpp  out_ptr.hpp  pointer_of.hpp  simple_inout_ptr.hpp  simple_out_ptr.hpp
include/boost/out_ptr/detail/: always_false.hpp  base_inout_ptr_impl.hpp  base_out_ptr_impl.hpp  clever_inout_ptr.hpp  clever_inout_ptr_impl.hpp  clever_out_ptr.hpp  clever_out_ptr_impl.hpp  customization_forward.hpp  inout_ptr_traits.hpp  is_specialization_of.hpp  out_ptr_traits.hpp  pointer_of.hpp  simple_inout_ptr.hpp  simple_out_ptr.hpp  voidpp_op.hpp
include/phd/: out_ptr.hpp
include/phd/out_ptr/: inout_ptr.hpp  necessary_arity.hpp  out_ptr.hpp  pointer_of.hpp
include/phd/out_ptr/detail/: base_inout_ptr_impl.hpp  base_out_ptr_impl.hpp  clever_inout_ptr.hpp  clever_inout_ptr_impl.hpp  clever_out_ptr.hpp  clever_out_ptr_impl.hpp  customization_forward.hpp  inout_ptr_traits.hpp  integer_sequence.hpp  is_specialization_of.hpp  out_ptr_traits.hpp  simple_inout_ptr.hpp  simple_out_ptr.hpp  voidpp_op.hpp
include/ztd/: out_ptr.hpp
include/ztd/out_ptr/: inout_ptr.hpp  necessary_arity.hpp  out_ptr.hpp  pointer_of.hpp  version.hpp
include/ztd/out_ptr/detail/: base_inout_ptr_impl.hpp  base_out_ptr_impl.hpp  clever_inout_ptr.hpp  clever_inout_ptr_impl.hpp  clever_out_ptr.hpp  clever_out_ptr_impl.hpp  customization_forward.hpp  inout_ptr_traits.hpp  integer_sequence.hpp  is_specialization_of.hpp  marker.hpp  out_ptr_traits.hpp  simple_inout_ptr.hpp  simple_out_ptr.hpp  voidpp_op.hpp
tests/: CMakeLists.txt
tests/failure/: CMakeLists.txt
tests/failure/source/: inout_ptr.raw.roundtrip.void.cpp  inout_ptr.roundtrip.shared_ptr.void.cpp  inout_ptr.roundtrip.void.cpp  inout_ptr.shared_ptr.cpp  inout_ptr.shared_ptr.deleter.cpp  main.cpp  out_ptr.roundtrip.shared.void.cpp  out_ptr.roundtrip.unique.void.cpp  out_ptr.shared_ptr.deleter.cpp
tests/include/: c_api.hpp
tests/include/boost/out_ptr/test/: c_api.hpp
tests/include/phd/out_ptr/test/: c_api.hpp
tests/include/ztd/out_ptr/test/: c_api.hpp
tests/source/: clever_inout_ptr_test.cpp  clever_out_ptr_test.cpp  const_test.cpp  custom_unique_deleter_test.cpp  customized_inout_ptr_test.cpp  customized_out_ptr_test.cpp  customized_traits_inout_ptr_test.cpp  customized_traits_out_ptr_test.cpp  exceptions_inout_ptr_test.cpp  exceptions_out_ptr_test.cpp  footguns.cpp  inout_ptr_test.cpp  main.cpp  out_ptr_test.cpp  out_ptr_tests_main.cpp  raw_inout_ptr_test.cpp  raw_out_ptr_test.cpp  simple_inout_ptr_test.cpp  simple_out_ptr_test.cpp
